# seminario-db

./: .env.example  .gitignore  README.md  README_ORACLE.md  pyproject.toml
.github/workflows/: ci-cd.yml
src/: database.py  main.py
src/db/: __init__.py
src/models/: __init__.py  calificacion.py  devolucion.py  prestamo.py  recurso.py  reserva.py  tipo_recurso.py  unidad.py  usuario.py
